feat: basic reaction

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "removeComments": false,
     "strict": true,
     "noImplicitReturns": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noImplicitAny": false,
     "noImplicitThis": false,
