--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "typings": "lib/index.d.ts",
   "scripts": {
     "test": "jest",
+    "test:watch": "jest --watch",
     "build": "tsc"
   },
   "author": "fi3ework",
