feat: add `@action`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "noUnusedParameters": false,
     "noImplicitAny": false,
     "noImplicitThis": false,
+    "experimentalDecorators": true,
     "lib": ["es6"]
   },
   "include": ["src/**/*.ts"],
