--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/jest": "^24.0.5",
     "jest": "^24.1.0",
     "ts-jest": "^23.10.5",
+    "ts-node": "^8.0.2",
     "tslint": "^5.12.1",
     "tslint-config-alloy": "^0.2.1",
     "typescript": "^3.3.3"
@@ -40,6 +41,7 @@
     }
   },
   "dependencies": {
+    "global": "^4.3.2",
     "tslint-config-prettier": "^1.18.0"
   }
 }
