--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
     "lib": ["es6"]
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "example", "lib", "__test__", "**/__stories__/**/*", "*.test.ts", "*.test.tsx"]
+  "exclude": ["node_modules", "lib", "__test__", "**/__stories__/**/*", "*.test.ts", "*.test.tsx"]
 }
