--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "types": "lib/index.d.ts",
   "typings": "lib/index.d.ts",
   "scripts": {
-    "test": "jest",
+    "test": "jest --coverage",
     "test:watch": "jest --watch",
     "build": "tsc"
   },
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/fi3ework/histor",
   "devDependencies": {
     "@types/jest": "^24.0.5",
+    "coveralls": "^3.0.3",
     "jest": "^24.1.0",
     "ts-jest": "^23.10.5",
     "ts-node": "^8.0.2",
