--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.3.3"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@types/node": "^11.11.4"
+  },
   "pre-commit": [
     "lint"
   ]
