--- a/package.json
+++ b/package.json
@@ -1,22 +1,31 @@
 {
   "name": "inking",
   "version": "0.0.1",
-  "description": "❄️Light-weight reactive date management library.",
+  "description": "Light-weight reactive date management library.",
   "main": "lib/index.js",
   "files": [
-    "lib/"
+    "lib/",
+    "LICENSE"
   ],
   "keywords": [
-    "object"
+    "observable",
+    "react",
+    "reactjs",
+    "reactive",
+    "functional-reactive-programming",
+    "state management",
+    "data flow"
   ],
   "types": "lib/index.d.ts",
   "typings": "lib/index.d.ts",
   "scripts": {
     "dev": "tsc --watch",
-    "test": "jest --coverage",
+    "test:all": "yarn lint && jest --coverage",
     "test:watch": "jest --watch",
     "build": "tsc",
-    "lint": "tslint './src/**/*.?(ts|tsx)'"
+    "prettier": "prettier --write './**/*.ts' './**/*.js'",
+    "lint": "tslint './src/**/*.?(ts|tsx)'",
+    "prepublishOnly": "yarn run lint && yarn test:all"
   },
   "author": "fi3ework",
   "license": "MIT",
@@ -28,10 +37,17 @@
     "url": "https://github.com/inkerjs/inking"
   },
   "homepage": "https://github.com/inkerjs/inking",
+  "dependencies": {},
   "devDependencies": {
     "@types/jest": "^23.0.0",
+    "@types/node": "^11.11.4",
     "coveralls": "^3.0.3",
+    "husky": "^1.3.1",
     "jest": "^23.0.0",
+    "lint-staged": "^8.1.5",
+    "prettier": "^1.16.4",
+    "rollup": "^1.7.0",
+    "rollup-plugin-filesize": "^6.0.1",
     "ts-jest": "^23.10.5",
     "ts-node": "^8.0.2",
     "tslint": "^5.12.1",
@@ -39,8 +55,16 @@
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.3.3"
   },
-  "dependencies": {
-    "@types/node": "^11.11.4"
+  "husky": {
+    "hooks": {
+      "precommit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,js}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "pre-commit": [
     "lint"
