--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
 
       # run tests!
       # TODO: yarn lint && yarn test
-      - run: yarn test
+      - run: yarn test:all
 
       - run:
           name: post coverage
