--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "Light-weight reactive date management library.",
   "main": "lib/index.js",
+  "module": "lib/index.module.js",
   "files": [
     "lib/",
     "LICENSE"
@@ -22,7 +23,8 @@
     "dev": "tsc --watch",
     "test:all": "yarn lint && jest --coverage",
     "test:watch": "jest --watch",
-    "build": "tsc",
+    "tsc-build": "tsc",
+    "pub-build": "ts-node scripts/build.ts",
     "prettier": "prettier --write './**/*.ts' './**/*.js'",
     "lint": "tslint './src/**/*.?(ts|tsx)'",
     "prepublishOnly": "yarn run lint && yarn test:all"
@@ -42,14 +44,18 @@
     "@types/jest": "^23.0.0",
     "@types/node": "^11.11.4",
     "coveralls": "^3.0.3",
+    "envify": "^4.1.0",
+    "fs-extra": "^7.0.1",
     "husky": "^1.3.1",
     "jest": "^23.0.0",
     "lint-staged": "^8.1.5",
     "prettier": "^1.16.4",
     "rollup": "^1.7.0",
     "rollup-plugin-filesize": "^6.0.1",
+    "rollup-plugin-node-resolve": "^4.0.1",
+    "shelljs": "^0.8.3",
     "ts-jest": "^23.10.5",
-    "ts-node": "^8.0.2",
+    "ts-node": "^8.0.3",
     "tslint": "^5.12.1",
     "tslint-config-alloy": "^0.2.1",
     "tslint-config-prettier": "^1.18.0",
